package example;

option java_package = "com.example";
option java_outer_classname = "Example";

message StringPair {
    optional string name = 1;
    optional string value = 2;
}

service SimpleService {
    rpc Exchange(StringPair) returns(StringPair);
}
